k8s/apps/under-construction/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: under-construction
  namespace: under-construction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: under-construction
  template:
    metadata:
      labels:
        app: under-construction
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: under-construction-html
