k8s/apps/under-construction/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: under-construction
  namespace: under-construction
spec:
  selector:
    app: under-construction
  ports:
    - port: 80
      targetPort: 80
