k8s/apps/under-construction/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: under-construction
  namespace: under-construction
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`under-construction.scrimreaper.dev`)
      services:
        - kind: Service
          name: under-construction
          port: 80
